--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -5,6 +5,8 @@ itemGroup.tetra=Tetra
 ###############################
 workbench.schema_list.empty=No upgrades available for the selected slot.
 workbench.repair=Repair
+workbench.schema_detail.craft=Craft
+workbench.schema_detail.back=back
 
 ###############################
 # MISC
