--- a/src/main/resources/assets/tetra/lang/zh_CN.lang
+++ b/src/main/resources/assets/tetra/lang/zh_CN.lang
@@ -14,6 +14,8 @@ item.modular.tier=等级
 item.modular.durability=耐久
 item.modular.speed=攻击速度
 item.modular.integrity_usage=完整度：%d/%d
+workbench.schema_detail.craft=合成
+workbench.schema_detail.back=返回
 
 ###############################
 # ITEM NAMES
