--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -137,8 +137,8 @@ basic_blade_schema.slot1=Blade material
 
 sword/basic_blade.name=Sword
 
-basic_blade/oak=Oak blade
-basic_blade/oak.prefix=Oak
+basic_blade/oak=Wooden blade
+basic_blade/oak.prefix=Wooden
 basic_blade/spruce=Spruce blade
 basic_blade/spruce.prefix=Spruce
 basic_blade/birch=Birch blade
@@ -147,8 +147,8 @@ basic_blade/jungle=Jungle blade
 basic_blade/jungle.prefix=Jungle
 basic_blade/acacia=Acacia blade
 basic_blade/acacia.prefix=Acacia
-basic_blade/dark_oak=Oak blade
-basic_blade/dark_oak.prefix=Oak
+basic_blade/dark_oak=Dark oak blade
+basic_blade/dark_oak.prefix=Dark oak
 basic_blade/cobblestone=Stone blade
 basic_blade/cobblestone.prefix=Stone
 basic_blade/stone=Solid stone blade
@@ -219,7 +219,7 @@ basic_hilt/iron=Iron hilt
 basic_hilt/bone=Bone hilt
 basic_hilt/blaze_rod=Blazing hilt
 basic_hilt/end_rod=End rod
-basic_hilt/oak=Oak hilt
+basic_hilt/oak=Wooden hilt
 basic_hilt/spruce=Spruce hilt
 basic_hilt/birch=Birch hilt
 basic_hilt/jungle=Jungle wood hilt
@@ -237,7 +237,7 @@ basic_hilt/ironwood=Ironwood hilt
 ###############################
 # DECORATIVE POMMEL
 ###############################
-decorative_pommel/oak=Decorative oak pommel
+decorative_pommel/oak=Decorative wood pommel
 decorative_pommel/cobblestone=Decorative stone pommel
 decorative_pommel/iron=Decorative iron pommel
 decorative_pommel/gold=Decorative gold pommel
@@ -259,7 +259,7 @@ decorative_pommel/knightmetal=Decorative knightmetal pommel
 ###############################
 # MAKESHIFT GUARD
 ###############################
-makeshift_guard/oak=Makeshift oak guard
+makeshift_guard/oak=Wooden makeshift guard
 makeshift_guard/cobblestone=Makeshift stone guard
 makeshift_guard/iron=Makeshift iron guard
 makeshift_guard/gold=Makeshift gold guard
@@ -285,7 +285,7 @@ wide_guard_schema.name=Wide guard
 wide_guard_schema.description=Craft a wide guard which protects the wielding hand, providing additional armor when held in the main-hand or off-hand.
 wide_guard_schema.slot1=Guard material
 
-wide_guard/oak=Wide oak guard
+wide_guard/oak=Wooden wide guard
 wide_guard/spruce=Wide spruce guard
 wide_guard/birch=Wide birch guard
 wide_guard/jungle=Wide jungle guard
@@ -322,7 +322,7 @@ counterweight_schema.name=Counterweight
 counterweight_schema.description=Balance the blade with a counterweight. Greatly increases attack speed if the counterweight consumes the same amount of integrity as all other parts combined. If integrity usage differs the bonus is reduced, a large difference reduces the bonus further and may even reduce the attack speed.
 counterweight_schema.slot1=Material
 
-counterweight/oak=Oak counterweight §7II
+counterweight/oak=Wooden counterweight §7II
 counterweight/spruce=Spruce counterweight §7II
 counterweight/birch=Birch counterweight §7II
 counterweight/jungle=Jungle counterweight §7II
@@ -359,12 +359,12 @@ reinforced_fuller_schema.name=Reinforce fuller
 reinforced_fuller_schema.description=Reinforce the fuller using the given material. Provides additional integrity and reduces the chance for the item to take damage (Unbreaking I) but makes the sword heavier and slower to swing.
 reinforced_fuller_schema.slot1=Material
 
-reinforced_fuller/oak=Oak reinforced fuller
+reinforced_fuller/oak=Wood reinforced fuller
 reinforced_fuller/spruce=Spruce reinforced fuller
 reinforced_fuller/birch=Birch reinforced fuller
 reinforced_fuller/jungle=Jungle reinforced fuller
 reinforced_fuller/acacia=Acacia reinforced fuller
-reinforced_fuller/dark_oak=Dark oak reinforced fuller
+reinforced_fuller/dark_oak=Dark-oak reinforced fuller
 reinforced_fuller/cobblestone=Cobblestone reinforced fuller
 reinforced_fuller/stone=Stone reinforced fuller
 reinforced_fuller/granite=Granite reinforced fuller
@@ -396,12 +396,12 @@ reinforced_bolster_schema.name=Reinforce bolster
 reinforced_bolster_schema.description=Reinforce the bolster using the given material, providing additional integrity at the cost of slower swing speed.
 reinforced_bolster_schema.slot1=Material
 
-reinforced_bolster/oak=Oak reinforced bolster
+reinforced_bolster/oak=Wood reinforced bolster
 reinforced_bolster/spruce=Spruce reinforced bolster
 reinforced_bolster/birch=Birch reinforced bolster
 reinforced_bolster/jungle=Jungle reinforced bolster
 reinforced_bolster/acacia=Acacia reinforced bolster
-reinforced_bolster/dark_oak=Dark oak reinforced bolster
+reinforced_bolster/dark_oak=Dark-oak reinforced bolster
 reinforced_bolster/cobblestone=Cobblestone reinforced bolster
 reinforced_bolster/stone=Stone reinforced bolster
 reinforced_bolster/granite=Granite reinforced bolster
@@ -433,7 +433,7 @@ forefinger_ring_schema.name=Forefinger ring
 forefinger_ring_schema.description=Attach a ring at the top of the hilt, greatly increasing grip. Increases the minimum damage dealt when swinging too fast from 20%% to 40%%.
 forefinger_ring_schema.slot1=Material
 
-forefinger_ring/oak=Oak ring
+forefinger_ring/oak=Wooden ring
 forefinger_ring/spruce=Spruce ring
 forefinger_ring/birch=Birch ring
 forefinger_ring/jungle=Jungle ring
@@ -470,7 +470,7 @@ grip_loop_schema.name=Grip loop
 grip_loop_schema.description=Attach a loop at the end of the hilt. Increases the range of sweeping attacks by 2 blocks.
 grip_loop_schema.slot1=Material
 
-grip_loop/oak=Oak loop
+grip_loop/oak=Wooden loop
 grip_loop/spruce=Spruce loop
 grip_loop/birch=Birch loop
 grip_loop/jungle=Jungle loop
@@ -509,8 +509,8 @@ short_blade_schema.slot1=Blade material
 
 sword/short_blade.name=Shortblade
 
-short_blade/oak=Oak shortblade
-short_blade/oak.prefix=Oak
+short_blade/oak=Wooden shortblade
+short_blade/oak.prefix=Wooden
 short_blade/spruce=Spruce shortblade
 short_blade/spruce.prefix=Spruce
 short_blade/birch=Birch shortblade
@@ -520,8 +520,8 @@ short_blade/jungle.prefix=Jungle
 short_blade/jungle.name=Stinger
 short_blade/acacia=Acacia shortblade
 short_blade/acacia.prefix=Acacia
-short_blade/dark_oak=Oak shortblade
-short_blade/dark_oak.prefix=Oak
+short_blade/dark_oak=Dark oak shortblade
+short_blade/dark_oak.prefix=Dark oak
 short_blade/flint=Flint shortblade
 short_blade/flint.prefix=Flint
 short_blade/flint.name=Dagger
@@ -598,8 +598,8 @@ sword/heavy_blade.name=Greatsword
 heavy_blade/crushing.name=Crushing
 heavy_blade/crushing.description=Attacks partially ignore armor
 
-heavy_blade/oak_log=Heavy oaken blade
-heavy_blade/oak_log.prefix=oaken
+heavy_blade/oak_log=Heavy wooden blade
+heavy_blade/oak_log.prefix=wooden
 heavy_blade/spruce_log=Heavy spruce blade
 heavy_blade/spruce_log.prefix=spruce
 heavy_blade/birch_log=Heavy birch blade
@@ -608,8 +608,8 @@ heavy_blade/jungle_log=Heavy jungle blade
 heavy_blade/jungle_log.prefix=jungle
 heavy_blade/acacia_log=Heavy acacia blade
 heavy_blade/acacia_log.prefix=acacia
-heavy_blade/dark_oak_log=Heavy oaken blade
-heavy_blade/dark_oak_log.prefix=oaken
+heavy_blade/dark_oak_log=Heavy dark-oak blade
+heavy_blade/dark_oak_log.prefix=dark oak
 heavy_blade/iron=Heavy iron cleaver
 heavy_blade/iron.prefix=iron
 heavy_blade/cobblestone=Heavy stone blade
@@ -679,8 +679,8 @@ machete_schema.slot1=Blade material
 
 sword/machete.name=Machete
 
-machete/oak=Oak machete
-machete/oak.prefix=Oak
+machete/oak=Wooden machete
+machete/oak.prefix=Wooden
 machete/spruce=Spruce machete
 machete/spruce.prefix=Spruce
 machete/birch=Birch machete
@@ -689,8 +689,8 @@ machete/jungle=Jungle machete
 machete/jungle.prefix=Jungle
 machete/acacia=Acacia machete
 machete/acacia.prefix=Acacia
-machete/dark_oak=Oak machete
-machete/dark_oak.prefix=Oak
+machete/dark_oak=Dark oak machete
+machete/dark_oak.prefix=Dark oak
 machete/cobblestone=Stone machete
 machete/cobblestone.prefix=Stone
 machete/stone=Solid stone machete
@@ -761,7 +761,7 @@ basic_handle/iron=Iron handle
 basic_handle/blaze_rod=Blazing handle
 basic_handle/end_rod=End rod
 basic_handle/iron=Iron handle
-basic_handle/oak=Oak handle
+basic_handle/oak=Wooden handle
 basic_handle/spruce=Spruce handle
 basic_handle/birch=Birch handle
 basic_handle/jungle=Jungle wood handle
@@ -788,7 +788,7 @@ basic_axe/severing.description=Deals bonus damage to unarmored targets
 
 basic_axe/oak=Wooden axe
 basic_axe/oak.name=Axe
-basic_axe/oak.prefix=Oak
+basic_axe/oak.prefix=Wooden
 basic_axe/cobblestone=Stone axe
 basic_axe/cobblestone.name=Axe
 basic_axe/cobblestone.prefix=Cobblestone
@@ -860,7 +860,7 @@ basic_pickaxe/puncturing.description=Attacks partially ignore armor
 
 basic_pickaxe/oak=Wooden pick
 basic_pickaxe/oak.name=Pickaxe
-basic_pickaxe/oak.prefix=Oak
+basic_pickaxe/oak.prefix=Wooden
 basic_pickaxe/cobblestone=Stone pick
 basic_pickaxe/cobblestone.name=Pickaxe
 basic_pickaxe/cobblestone.prefix=Cobblestone
@@ -924,7 +924,7 @@ butt_schema.description=Used as the back side of a single sided tool, yields low
 butt_schema.slot1=Head material
 
 
-butt/oak=Oak butt
+butt/oak=Wooden butt
 butt/cobblestone=Stone butt
 butt/iron=Iron butt
 butt/diamond=Diamond butt
@@ -1010,7 +1010,7 @@ adze_schema.slot1=Head material
 
 adze/oak=Wooden adze
 adze/oak.name=Adze
-adze/oak.prefix=Oak
+adze/oak.prefix=Wooden
 adze/cobblestone=Stone adze
 adze/cobblestone.name=Adze
 adze/cobblestone.prefix=Cobblestone
@@ -1076,7 +1076,7 @@ hoe_schema.slot1=Hoe material
 
 hoe/oak=Wooden hoe
 hoe/oak.name=Hoe
-hoe/oak.prefix=Oak
+hoe/oak.prefix=Wooden
 hoe/cobblestone=Stone hoe
 hoe/cobblestone.name=Hoe
 hoe/cobblestone.prefix=Cobblestone
@@ -1142,7 +1142,7 @@ sickle_schema.slot1=Sickle material
 
 sickle/oak=Wooden sickle
 sickle/oak.name=Sickle
-sickle/oak.prefix=Oak
+sickle/oak.prefix=Wooden
 sickle/cobblestone=Stone sickle
 sickle/cobblestone.name=Sickle
 sickle/cobblestone.prefix=Cobblestone
