completely hid config disabled blocks

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -69,7 +69,7 @@ tile.forged_wall.name=Forged wall
 tile.hammer_base.name=Hammer base
 tile.hammer_head.name=Hammer head
 
-ancient_description=Found in structures deep underground in snowy biomes
+ancient_description=§8Found in structures deep underground in snowy biomes
 
 ###############################
 # SWORD
