--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -57,13 +57,14 @@ item.magmatic_cell.charge_empty=§cEmpty
 ###############################
 # ANCIENT TILESET
 ###############################
-tile.forged_pillar.name=Forged Pillar
+tile.forged_pillar.name=Forged pillar
 tile.forged_platform.name=Forged platform
 tile.forged_platform_slab.name=Forged platform
 tile.forged_wall.name=Forged wall
-tile.forged_vent.name=Forged Vent
+tile.forged_vent.name=Forged vent
+tile.forged_crate.name=Forged crate
 
-tile.forged_container.name=Forged Container
+tile.forged_container.name=Forged container
 forged_container.compartment=Compartment %s
 
 tile.hammer_base.name=Hammer base
@@ -78,7 +79,7 @@ salvage_beam_action.label=Salvage
 item.forged_mesh.name=Flex mesh
 salvage_mesh_action.label=Salvage
 
-item.quick_latch.name=Quick Latch
+item.quick_latch.name=Quick latch
 item.quick_latch.description=Reveals related upgrade schemas while in the inventory.
 salvage_quick_latch_action_hammer.label=Salvage
 salvage_quick_latch_action_pry.label=Salvage
